<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:cardCornerRadius="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black2"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:orientation="horizontal"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_error"
                app:tint="@color/colorPurple" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:text="@string/enter_your_email_to_reset_password"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edit_email_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:hint="@string/e_mail"
            app:counterEnabled="true"
            app:counterMaxLength="50"
            app:hintEnabled="false">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/ed_custom"
                android:drawableStart="@drawable/icon_email"
                android:drawablePadding="10dp"
                android:drawableTint="@color/colorPurple"
                android:hint="@string/enter_your_email"
                android:inputType="textEmailAddress"
                android:textColor="@drawable/background_search_edit_text"
                android:textColorHint="#757373" />
        </com.google.android.material.textfield.TextInputLayout>


        <br.com.simplepass.loadingbutton.customViews.CircularProgressButton
            android:id="@+id/btn_get_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/round_bg"
            android:padding="16dp"
            android:text="@string/reset_password"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:initialCornerAngle="15dp"
            app:spinning_bar_color="#fff"
            app:spinning_bar_padding="4dp"
            app:spinning_bar_width="2dp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>