<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black2"
    tools:context=".ChatActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_message"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_view_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:src="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_view_profile_picture"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_marginStart="24dp"
            android:src="@drawable/ic_account"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/txt_view_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:text="@string/username"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycle_chat_message"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/rl_reply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_message" />

    <RelativeLayout
        android:id="@+id/rl_reply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@id/rl_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/reply_to"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:text="Replying to Ahmed"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/messageReply"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reply_to"
            android:layout_alignParentStart="true"
            android:layout_marginEnd="30dp"
            android:text="Replying to Ahmed"
            android:textColor="#787474"
            android:textSize="15sp" />

        <ImageButton
            android:id="@+id/remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:src="@drawable/ic_remove_circle" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/rl_message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/rl_attach"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/fab_attach"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:visibility="visible"
            android:backgroundTint="@color/black2"
            android:contentDescription="no"
            android:src="@drawable/ic_baseline_attach_file_24"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/fab_camera"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black2"
            android:contentDescription="no"
            android:visibility="visible"
            android:src="@drawable/photo_camera"
            tools:ignore="HardcodedText" />

        <ImageButton
            android:id="@+id/fab_image"
            android:layout_width="0dp"
            android:visibility="visible"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:layout_weight="1"
            android:backgroundTint="@color/black2"
            android:contentDescription="no"
            android:src="@drawable/ic_image"
            tools:ignore="HardcodedText" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_edit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:visibility="visible"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="5">

            <EditText
                android:id="@+id/et_message"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_search_edit_text"
                android:elevation="2dp"
                android:hint="Aa"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="30dp"
                android:paddingBottom="10dp" />

            <ImageView
                android:id="@+id/imageView_emoji"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="5dp"
                android:elevation="2dp"
                app:layout_constraintBottom_toBottomOf="@id/et_message"
                app:layout_constraintEnd_toEndOf="@id/et_message"
                app:layout_constraintTop_toTopOf="@id/et_message"
                app:srcCompat="@drawable/ic_emoji" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <com.tougee.recorderview.AudioRecordView
            android:id="@+id/fab_speech"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:contentDescription="no"
            tools:ignore="HardcodedText"
            app:mic_icon="@drawable/ic_mic"
            app:mic_active_icon="@drawable/ic_play_arrow"
            app:mic_hint_enable="true"

            app:mic_hint_text="@string/hold_to_record_audio"
            app:blink_color="@color/color_blue"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            app:circle_color="@color/color_blink"
            app:cancel_icon_color="@color/color_blue"
            app:slide_cancel_text="@string/slide_to_cancel"
            app:cancel_text="@string/cancel"
            app:vibration_enable="false" />

        <ImageView
            android:id="@+id/imageview_send"
            android:layout_width="0dp"
            android:visibility="gone"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="4dp"
            android:layout_weight="1"
            android:elevation="2dp"
            app:srcCompat="@drawable/ic_send" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/rl_attach"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#222121"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/iv_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_location" />

        <ImageView
            android:id="@+id/iv_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_music" />


        <ImageView
            android:id="@+id/iv_docs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_docs" />

        <ImageView
            android:id="@+id/iv_video"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:src="@drawable/ic_video" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>